# busd

./: .gitignore  Cargo.toml
migrations/2020-04-09-152409_users/: up.sql
migrations/2020-04-09-152731_authclients/: down.sql  up.sql
migrations/2020-04-09-152955_botowners/: down.sql  up.sql
migrations/2020-04-09-153249_authclientowners/: down.sql  up.sql
migrations/2020-04-09-153518_oauthtokens/: down.sql  up.sql
migrations/2020-04-09-153525_authproviders/: down.sql  up.sql
migrations/2020-04-09-153609_authorizedclients/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: mod.rs
