[package]
name = "busd"
version = "0.1.0"
authors = ["Anthony Li <me@anli.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.12.35"
juniper = "0.14.2"
juniper_hyper = "0.5.2"
futures = "0.3.4"