[package]
name = "busd"
version = "0.1.0"
authors = ["Anthony Li <me@anli.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
actix-cors = "^0.2"
juniper = "^0.14"
serde = "^1.0"
serde_json = "^1.0"